Fix Icon alignment on mobile view

--- a/src/app/core/components/auth/auth.component.less
+++ b/src/app/core/components/auth/auth.component.less
@@ -51,6 +51,7 @@ mat-icon.default-account-icon{
     height: 25px;
     width: 25px;
     margin: 6px 0;
+    text-align: center;
   }
 
   mat-icon.account-icon {
