--- a/src/app/core/components/nav-desktop/nav-desktop.component.less
+++ b/src/app/core/components/nav-desktop/nav-desktop.component.less
@@ -223,7 +223,6 @@ mat-icon.account-icon {
 .all-offers {
   color: #ffcc00;
   font-family: Lato, sans-serif;
-  cursor: pointer;
   text-decoration: underline;
   font-size: 16px;
   margin-left: 2rem;
