--- a/src/app/core/components/nav-mobile/nav-mobile.component.less
+++ b/src/app/core/components/nav-mobile/nav-mobile.component.less
@@ -61,16 +61,18 @@ mat-icon.account-icon {
   color: #0c1c31;
   margin-right: 0.2rem;
   text-decoration: none;
+  text-align: center;
 
   mat-icon {
-    font-size: 20px;
-    height: 24px;
-    width: 24px;
+    font-size: 25px;
+    height: 25px;
+    width: 25px;
+
   }
 }
 
 .header-link * {
-  vertical-align: text-bottom;
+  vertical-align: middle;
 }
 
 .top-navbar {
